# perf_enum_vs_box_dyn_iterate_quick_test

./: .gitignore  Cargo.toml  readme.md
criterion_benchmark/iter dyn box sum os par/base/: benchmark.json  estimates.json
criterion_benchmark/iter dyn box sum os par/new/: sample.json
criterion_benchmark/iter dyn box sum os/base/: benchmark.json
criterion_benchmark/iter dyn box sum os/new/: estimates.json  sample.json  tukey.json
criterion_benchmark/iter dyn box sum os/report/: index.html
criterion_benchmark/iter enum sum os par/base/: benchmark.json
criterion_benchmark/iter enum sum os par/new/: estimates.json  sample.json
criterion_benchmark/iter enum sum os par/report/: index.html
criterion_benchmark/iter enum sum os/base/: benchmark.json
criterion_benchmark/iter enum sum os/new/: sample.json
criterion_benchmark_html/iter dyn box sum os par/new/: tukey.json
criterion_benchmark_html/iter dyn box sum os par/report/: index.html
criterion_benchmark_html/iter enum sum os par/new/: tukey.json
criterion_benchmark_html/iter enum sum os/base/: estimates.json  tukey.json
criterion_benchmark_html/iter enum sum os/report/: index.html
src/: main.rs
